test/vm/fails/read_fail2.js

var test;
if(test) {
	test = 0;
}
